manifests/apps/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.10.9
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config-src
          configMap:
            name: homepage-config
        - name: config
          emptyDir: {}
